java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddThrowsClauseHint4.pass
package org.netbeans.test.java.hints;

import java.io.IOException;

public class AddThrowsClause4 {
    
    public AddThrowsClause4() {
    }
    
    public void test() throws IOException {
        throw exc();
    }
    
    public IOException exc() {
        return new IOException();
    }
}
